# pk2

./: .gitignore  .travis.yml  ARCHITECTURE.md  Cargo.toml  Justfile  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml  release.yml
crates/pk2-sync/: Cargo.toml
crates/pk2-sync/src/: fs.rs  io.rs  lib.rs
crates/pk2-sync/tests/: archive_creation.rs  directory_operations.rs  file_read.rs  file_write.rs
pk2_mate/: Cargo.toml
pk2_mate/src/: main.rs
src/: api.rs  archive.rs  blowfish.rs  buffer.rs  constants.rs  data.rs  error.rs  filetime.rs  format.rs  fs.rs  io.rs  lib.rs  main.rs  parse.rs  phys_file.rs  raw.rs
src/api/: fs.rs
src/archive/: block_chain.rs  block_manager.rs  buffer.rs  entry.rs  fs.rs  header.rs  mod.rs  phys_file.rs
src/data/: block_chain.rs  block_manager.rs  entry.rs  header.rs
src/format/: block_chain.rs  chain_index.rs  entry.rs  header.rs
src/fs/: dir.rs  file.rs  file_mut.rs  mod.rs
src/raw/: block_chain.rs  block_manager.rs  entry.rs  header.rs
tests/: test.rs
