[package]
name = "pk2"
version = "0.3.0"
authors = ["Lukas Wirth <lukastw97@gmail.com>"]
edition = "2024"
description = "Crate for interacting with Silkroad Online's pk2 archive format"
homepage = "https://github.com/veykril/pk2"
repository = "https://github.com/veykril/pk2"
license = "MIT"
readme = "README.md"
categories = ["encoding", "filesystem", "parser-implementations"]
exclude = ["pk2_mate/*"]

[dependencies]
encoding_rs = { version = "0.8", optional = true }
hashbrown = { version = "0.16", default-features = false }
rustc-hash = "2.1.1"

[features]
default = ["euc-kr"]
std = ["rustc-hash/std"]

# required for parsing silkroad online archives
euc-kr = ["encoding_rs"]

[dev-dependencies]
bytemuck = "1.22.0"
pk2-sync = { path = "./crates/pk2-sync" }
camino = "1.1.9"
expect-test = "1.5.1"

[workspace]
members = [ "crates/pk2-sync","pk2_mate"]
